--- a/untitled/pom.xml
+++ b/untitled/pom.xml
@@ -13,5 +13,12 @@
         <maven.compiler.target>20</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+    <dependencies>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-graphdb</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+    </dependencies>
+
 </project>
